--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
 </head>
   <body class="bg-slate-50 dark:bg-slate-900 transition-colors duration-200">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
